--- a/by.Reba/by.Reba.Application/appsettings.json
+++ b/by.Reba/by.Reba.Application/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "RebaDbConnection": "Server=DESKTOP-L9PR3S2;Database=RebaDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
