--- a/by.Reba/by.Reba.Business/by.Reba.Business.csproj
+++ b/by.Reba/by.Reba.Business/by.Reba.Business.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ServicesImplementations\" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
   </ItemGroup>
 
   <ItemGroup>
