--- a/by.Reba/by.Reba.Business/by.Reba.Business.csproj
+++ b/by.Reba/by.Reba.Business/by.Reba.Business.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
   <ItemGroup>
