Removed admin panel project. Added admin articles index view

--- a/by.Reba/by.Reba.AdminPanel/by.Reba.AdminPanel.csproj
+++ b/by.Reba/by.Reba.AdminPanel/by.Reba.AdminPanel.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\by.Reba.Business\by.Reba.Business.csproj" />
+    <ProjectReference Include="..\by.Reba.Infrastructure\by.Reba.Infrastructure.csproj" />
     <ProjectReference Include="..\Core\by.Reba.Core.csproj" />
   </ItemGroup>
 
