Added authentication and authorization logic

--- a/by.Reba/by.Reba.Application/appsettings.json
+++ b/by.Reba/by.Reba.Application/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "RebaDbConnection": "Server=DESKTOP-L9PR3S2;Database=RebaDb;Trusted_Connection=True;"
   },
+
+  "Roles": {
+    "User": "User",
+    "Admin": "Admin"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
