Add hangfire jobs for recieve articles from external resources

--- a/by.Reba/by.Reba.Application/appsettings.json
+++ b/by.Reba/by.Reba.Application/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RebaDbConnection": "Server=DESKTOP-L9PR3S2;Database=RebaDb;Trusted_Connection=True;"
+    "RebaDbConnection": "Server=DESKTOP-L9PR3S2;Database=RebaDb;Trusted_Connection=True;MultipleActiveResultSets=True",
   },
 
   "Roles": {
