--- a/by.Reba/by.Reba.DataBase/by.Reba.DataBase.csproj
+++ b/by.Reba/by.Reba.DataBase/by.Reba.DataBase.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core\by.Reba.Core.csproj" />
+  </ItemGroup>
+
 </Project>
