Rename Core project directory folder

--- a/by.Reba/by.Reba.Application/by.Reba.Application.csproj
+++ b/by.Reba/by.Reba.Application/by.Reba.Application.csproj
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\by.Reba.Business\by.Reba.Business.csproj" />
-    <ProjectReference Include="..\Core\by.Reba.Core.csproj" />
+    <ProjectReference Include="..\by.Reba.Core\by.Reba.Core.csproj" />
   </ItemGroup>
 
 </Project>
