--- a/by.Reba/by.Reba.DataBase/by.Reba.DataBase.csproj
+++ b/by.Reba/by.Reba.DataBase/by.Reba.DataBase.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\by.Reba.Core.csproj" />
+    <ProjectReference Include="..\by.Reba.Core\by.Reba.Core.csproj" />
   </ItemGroup>
 
 </Project>
