--- a/by.Reba/by.Reba.Data.Repositories/by.Reba.Data.Repositories.csproj
+++ b/by.Reba/by.Reba.Data.Repositories/by.Reba.Data.Repositories.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\by.Reba.Core\by.Reba.Core.csproj" />
     <ProjectReference Include="..\by.Reba.Data.Abstractions\by.Reba.Data.Abstractions.csproj" />
     <ProjectReference Include="..\by.Reba.DataBase\by.Reba.DataBase.csproj" />
-    <ProjectReference Include="..\Core\by.Reba.Core.csproj" />
   </ItemGroup>
 
 </Project>
