Added jwt authentication logic

--- a/by.Reba/by.Reba.WebAPI/appsettings.json
+++ b/by.Reba/by.Reba.WebAPI/appsettings.json
@@ -1,9 +1,27 @@
 {
+  "ConnectionStrings": {
+    "RebaDbConnection": "Server=DESKTOP-L9PR3S2;Database=RebaDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+
+  "Roles": {
+    "User": "User",
+    "Admin": "Admin"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "Token": {
+    "JwtSecret": "{87654178-F7A0-4F01-94DB-B7C5C5A92DBA}",
+    "Issuer": "by.Reba",
+    "ExpiryMinutes": 1
+  },
+
+  "AllowedHosts": "*",
+  "XmlDoc": "f:\\GoodNewsAggregator\\by.Reba\\by.Reba.WebAPI\\doc.xml"
 }
