add ispras url to appsettings

--- a/by.Reba/by.Reba.Application/appsettings.json
+++ b/by.Reba/by.Reba.Application/appsettings.json
@@ -15,5 +15,10 @@
       "Hangfire": "Information"
     }
   },
+
+  "Ispras": {
+    "Url": "http://api.ispras.ru/texterra/v1/nlp?targetType=lemma&apikey=736af07339c6209d5b43d9254ff8f67407be1c73",
+  },
+
   "AllowedHosts": "*"
 }
