--- a/by.Reba/by.Reba.WebAPI/appsettings.json
+++ b/by.Reba/by.Reba.WebAPI/appsettings.json
@@ -16,6 +16,10 @@
     }
   },
 
+  "Ispras": {
+    "Url": "http://api.ispras.ru/texterra/v1/nlp?targetType=lemma&apikey=736af07339c6209d5b43d9254ff8f67407be1c73"
+  },
+
   "Token": {
     "JwtSecret": "{87654178-F7A0-4F01-94DB-B7C5C5A92DBA}",
     "Issuer": "by.Reba",
